<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/mostrar_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:enabled="false"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100sp"
        android:layout_marginHorizontal="40sp"

        android:text="@string/senha_gerada"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textStyle="bold"
        android:backgroundTint="@color/primary"
        />

    <Button
        android:id="@+id/gerar_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/copiar_senha"

        android:layout_marginHorizontal="10sp"
        android:backgroundTint="@color/primary"

        android:text="@string/gerar_senha"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/copiar_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        android:layout_marginBottom="10sp"
        android:layout_marginHorizontal="10sp"
        android:backgroundTint="@color/secondary"

        android:text="@string/copiar_senha"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/letras_minusculas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/letras_maisculas"

        android:text="@string/letras_minusculas"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginVertical="50sp"
        android:layout_marginEnd="80sp"
        android:layout_marginStart="50sp"
        />

    <Switch
        android:id="@+id/switch_minusculas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:thumbTint="@color/primary"

        app:layout_constraintBottom_toBottomOf="@+id/letras_minusculas"
        app:layout_constraintStart_toEndOf="@+id/letras_minusculas"
        tools:ignore="UseSwitchCompatOrMaterialXml"
        />

    <TextView
        android:id="@+id/letras_maisculas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/numeros"

        android:text="@string/letras_maiusculas"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginVertical="50sp"
        android:layout_marginEnd="80sp"
        android:layout_marginStart="50sp"
        />

    <Switch
        android:id="@+id/switch_maiusculas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:thumbTint="@color/primary"

        app:layout_constraintBottom_toBottomOf="@+id/letras_maisculas"
        app:layout_constraintStart_toEndOf="@+id/letras_maisculas"
        tools:ignore="UseSwitchCompatOrMaterialXml"
        />

    <TextView
        android:id="@+id/numeros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/caracteres_especiais"

        android:text="@string/numeros"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginVertical="50sp"
        android:layout_marginEnd="80sp"
        android:layout_marginStart="50sp"
        />

    <Switch
        android:id="@+id/switch_numeros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:thumbTint="@color/primary"

        app:layout_constraintBottom_toBottomOf="@+id/numeros"
        app:layout_constraintStart_toEndOf="@+id/numeros"
        tools:ignore="UseSwitchCompatOrMaterialXml"
        />

    <TextView
        android:id="@+id/caracteres_especiais"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/gerar_senha"

        android:text="@string/caracteres_especiais"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="50sp"
        android:layout_marginStart="50sp"
        android:layout_marginEnd="80sp"
        android:layout_marginBottom="150sp"
        />

    <Switch
        android:id="@+id/switch_caracteres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:thumbTint="@color/primary"

        app:layout_constraintBottom_toBottomOf="@+id/caracteres_especiais"
        app:layout_constraintStart_toEndOf="@+id/caracteres_especiais"
        tools:ignore="UseSwitchCompatOrMaterialXml"
        />

</androidx.constraintlayout.widget.ConstraintLayout>